2011-08-30  Jason Merrill  <jason@redhat.com>

	PR c++/50089
	* semantics.c (finish_id_expression): Use
	current_nonlambda_class_type for qualified-ids.

	PR c++/50114
	* decl.c (poplevel): Disable for scope compatibility hack
	in C++11 mode.

	PR c++/50220
	* semantics.c (add_capture): Call complete_type for copy.

	PR c++/50234
	* semantics.c (cxx_eval_component_reference): Handle
	value-initialization for omitted initializers.

2011-08-29  Jason Merrill  <jason@redhat.com>

	PR c++/50224
	* semantics.c (finish_id_expression): Mark captured variables used.

2011-08-29  Jakub Jelinek  <jakub@redhat.com>
	    Jason Merrill  <jason@redhat.com>

	PR c++/50207
	* class.c (finish_struct_1): Complain if the first field is
	artificial.

2011-08-29  Jason Merrill  <jason@redhat.com>

	PR c++/50209
	Core DR 994
	* parser.c (cp_parser_default_argument): Use
	cp_parser_initializer_clause.
	(cp_parser_late_parsing_default_args): Likewise.

2011-08-26  Jason Merrill  <jason@redhat.com>

	Core DR 342
	PR c++/48582
	* pt.c (check_valid_ptrmem_cst_expr): A null member pointer value
	is valid in C++11.
	(convert_nontype_argument): Likewise.  Implicitly convert nullptr
	and do constant folding.
	* mangle.c (write_template_arg_literal): Mangle null member
	pointer values as 0.
	* call.c (null_member_pointer_value_p): New.
	* cp-tree.h: Declare it.

2011-08-25  Jason Merrill  <jason@redhat.com>

	* call.c (convert_like_real): Remove redundant complain checks.

	PR c++/50157
	* call.c (convert_like_real): Exit early if bad and !tf_error.

2011-08-23  Jason Merrill  <jason@redhat.com>

	* typeck2.c (build_functional_cast): Don't try to avoid calling
	build_value_init.
	* pt.c (instantiate_class_template_1): Don't copy TYPE_HAS_* flags.

2011-08-23  Jason Merrill  <jason@redhat.com>

	PR c++/49045
	Core 1321
	* tree.c (dependent_name): New.
	(cp_tree_equal): Two calls with the same dependent name are
	equivalent even if the overload sets are different.
